[tool.poetry]
name = "onnx_testing"
version = "0.1.0"
description = ""
authors = ["Martin Høy <martin@hoy.priv.no>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
transformers = "^4.27.3"
pillow = "^9.4.0"
opencv-python = "^4.7.0.72"
torch = [
    { markers = "platform_machine == 'aarch64'", url = "https://download.pytorch.org/whl/torch-1.13.1-cp310-cp310-manylinux2014_aarch64.whl"},
    { markers = "platform_machine == 'x86_64'", version = "^1.13.1"},
]
pydantic = "^1.10.7"

[tool.poetry.group.export]
optional = true

[tool.poetry.group.inference]
optional = true


[tool.poetry.group.export.dependencies]
optimum = {extras = ["exporters"], version = "^1.7.3"}


[tool.poetry.group.inference.dependencies]
onnxruntime = "^1.14.1"


[tool.poetry.group.dev.dependencies]
ipykernel = { markers = "platform_machine == 'x86_64'", version = "^6.22.0" }



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
