[tool.poetry]
name = "onnx_testing"
version = "0.1.0"
description = ""
authors = ["Martin Høy <martin@hoy.priv.no>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.16"
transformers = "^4.27.3"
pillow = "^9.4.0"
pydantic = "^1.10.7"
opencv-python = {path = "dependencies/opencv_python-4.7.0.72-cp39-cp39-linux_aarch64.whl"}
torch = {path = "dependencies/torch-1.13.1-cp39-cp39-manylinux2014_aarch64.whl"}

[tool.poetry.group.export]
optional = true

[tool.poetry.group.inference]
optional = true


[tool.poetry.group.export.dependencies]
optimum = {extras = ["exporters"], version = "^1.7.3"}


[tool.poetry.group.inference.dependencies]
onnxruntime-gpu = {path = "dependencies/onnxruntime_gpu-1.11.0-cp39-cp39-linux_aarch64.whl"}


[tool.poetry.group.dev.dependencies]
ipykernel = { markers = "platform_machine == 'x86_64'", version = "^6.22.0" }



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
